Also using vavr.io lists and functions